--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,11 +11,14 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
+    <td><%= link_to user.username, user %></td>
     <td><%= user.email %></td>
-    <td><%= link_to 'Show', user %></td>
+
+    <% if current_user %>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
+
   </tr>
 <% end %>
 </table>
