--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,28 @@
-<p id="notice"><%= notice %></p>
+<h2>My Stocks</h2>
+<h4>Stocks that <%= @user.username %> is watching </h4>
 
-<p>
-  <b>Username:</b>
-  <%= @user.username %>
-</p>
+<b>Username:</b>
+<%= @user.username %>
+<b>Email:</b>
+<%= @user.email %>
 
-<p>
-  <b>Email:</b>
-  <%= @user.email %>
-</p>
+
+<table>
+  <tr>
+    <th>User Stocks</th>
+  </tr>
+
+  <% @stocks.each do |stock| %>
+    <tr>
+      <td><%= stock.symbol %></td>
+    </tr>
+  <% end %>
+</table>
+
+<br />
+
+
+<h2><%= current_user %> is logged in.</h2>
 
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
