--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -26,4 +26,8 @@
   <%= link_to 'User Page', users_path %>
 <% end %>
 
+<%= link_to 'My Stocks', user_path(current_user) %>
+
 <h2><%= current_user %> is logged in.</h2>
+
+
