--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,7 @@
     <th>Last Price</th>
     <th>Dividend/Share</th>
     <th>Pay Date</th>
+    <th>Unwatch</th>
   </tr>
 
   <% @stocks.each do |stock| %>
@@ -23,6 +24,7 @@
       <td><%= @quotes[stock.symbol.upcase].lastTrade %></td>
       <td><%= @quotes_ext[stock.symbol.upcase].dividendPerShare %></td>
       <td><%= @quotes_ext[stock.symbol.upcase].exDividendDate %></td>
+      <td><%= link_to 'Remove', stocks_unwatch_path(stock) %></td>
     </tr>
   <% end %>
 </table>
@@ -34,4 +36,4 @@
 
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', stocks_path %>
+<%= link_to 'View all Stocks', stocks_path %>
