--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
   </tr>
 
   <% @stocks.each do |stock| %>
-    <tr>
+    <tr class="<%= cycle("odd", "even") %>">
       <td><%= link_to @quotes[stock.symbol.upcase].symbol, stock %></td>
       <td><%= @quotes[stock.symbol.upcase].name %></td>
       <td><%= @quotes[stock.symbol.upcase].lastTrade %></td>
@@ -35,5 +35,4 @@
 <h2><%= current_user %> is logged in.</h2>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'View all Stocks', stocks_path %>
