--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,21 @@
   <body>
 
     <div id="nav">
-      <% if current_user %>
-        <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-        <%= link_to "Logout", :logout %>
-      <% else %>
-        <%= link_to "Register", new_user_path %> |
-        <%= link_to "Login", :login %>
-      <% end %>
-    </div>
-    <div>
-      <p id="notice"><%= notice %></p>
-      <p id="alert"><%= alert %></p>
-    </div>
+      <center>
+        <% if current_user %>
+          <%= link_to "Edit User", edit_user_path(current_user.id) %> |
+          <%= link_to "Logout", :logout %>
+        <% else %>
+          <%= link_to "Register", new_user_path %> |
+          <%= link_to "Login", :login %>
+        <% end %>
+      </div>
+      <div>
+        <p id="notice"><%= notice %></p>
+        <p id="alert"><%= alert %></p>
+      </div>
+    </center>
+
     <%= yield %>
 
   </body>
