--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
   </tr>
 
   <% @users.each do |user| %>
-    <tr>
+    <tr class="<%= cycle("odd", "even") %>">
       <td><%= link_to user.username, user %></td>
       <td><%= user.email %></td>
 
