--- a/public/stylesheets/final_styling.css
+++ b/public/stylesheets/final_styling.css
@@ -33,14 +33,14 @@ th{
   background: #e5e5e5;
 }
 
-#new_book{
-  width: 500px;
+#login_form{
+  width: 400px;
   margin-left: 0;
   margin-right: auto;
 }
 
-#post_comment{
-  width: 300px;
+.container{
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
 }
