--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
     <th>Prev Close</th>
     <th>Open</th>
     <th>Dividend/Share</th>
+    <th>Yield</th>
     <th>Ex Date</th>
     <th>Pay Date</th>
     <th>Unwatch</th>
@@ -28,6 +29,7 @@
       <td><%= @quotes[stock.symbol.upcase].previousClose %></td>
       <td><%= @quotes[stock.symbol.upcase].open %></td>
       <td><%= @quotes_ext[stock.symbol.upcase].dividendPerShare %></td>
+      <td><%= @quotes_ext[stock.symbol.upcase].dividendYield %></td>
       <td><%= @quotes_ext[stock.symbol.upcase].exDividendDate %></td>
       <td><%= @quotes_ext[stock.symbol.upcase].dividendPayDate %></td>
       <td><%= link_to 'Remove', stocks_unwatch_path(stock) %></td>
