--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New stock</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', stocks_path %>
+<div class="container">                                                                                         
+  <div id="login_form">
+    <%= render 'form' %>  
+    <br />
+    <%= link_to 'Back', stocks_path %>
+  </div>
+</div>
